hphp/test/zend7/Zend/tests/bug73792.php.expectf

Warning: %s

Fatal error: %s
Stack trace:
#0 {main}
  thrown in %sbug73792.php on line 4